# django-oscar-paytrail

./: LICENSE  README.md  setup.cfg
paytrail/: urls.py  views.py
