[metadata]
name = django-oscar-paytrail
version = 1.0.0
description = Integrates Django Oscar to Paytrail.
long_description = file: README.md
url = https://github.com/kunkku/django-oscar-paytrail
license_files = LICENSE

[options]
include_package_data = true
packages = find:
python_requires = >=3.5
install_requires =
    Django >= 2.2
    django-oscar >= 2.1 
